first working browser test (puppetteer & express)

--- a/spec/fixtures/external/index.html
+++ b/spec/fixtures/external/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>html-webpack-tags-plugin browser test</title>
-  <!-- CSS Tags -->
+  <title>html-webpack-tags-plugin external browser test</title>
 </head>
 
 <body>
-  <!-- Application Root -->
-  <div id="root"></div>
-  <!-- Script Tags -->
+  <div id="external-root">
+    Loading...
+  </div>
 </body>
 
 </html>
